style : fixed bottom spacing in about and resume pages

--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -5,6 +5,7 @@
     @include setMarginPadding();
     overflow: auto;
     @include sectionTopSpacing();
+    @include sectionBottomSpacing();
 }
 
 #profileImg {
